sort.pancake.GatesPancake.scala.error
Compilation error:
GatesPancake:28: error: illegal start of simple expression
}
^