sort.pancake.GatesPancake.scala.code
def solve() {
  var nbCrepes = getTaillePile()
  var t=0
  var tmoins1 = 0
  var tplus1 = 0
  while(!estTriee()){
    t = getRayonCrepe(0)
    tplus1 = trouverTPlus1(t)
    tmoins1 = trouverTMoins1(t)
    
  }
}

def estLibre(rang:Int) = Boolean{
  if (rang>0){
    if (getRayonCrepe(rang - 1) == getRayonCrepe(rang) - 1){return false}
  }
  if (rang < nbCrepes - 1){
  	if (getRayonCrepe(rang + 1) == getRayonCrepe(rang) + 1){return false}
  }
  return true
}

def trouverTPlus1(t:Int){
  var i = 0
  for (i <- 1 to getTaillePile()-1)
  
}

def trouverTMoins1(t:Int){
  
}